<resources>
    <string name="app_name">MadLevel1Example</string>
    <string name="what_kind_of_animal_is_this">What kind of animal is this?</string>
    <string name="confirm">Confirm</string>
    <string name="species">Species</string>
    <string name="shows_species">shows Species</string>
    <string name="type_species">Type Species</string>

    <string name="giraffe">Giraffe</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect, the correct answer is Giraffe!</string>
</resources>